# stock_tracker_agent

./: .cursorignore  .env.example  .gitignore  PRD.md  README.md  SECURITY_LOGGING.md  SETUP_MACOS.md  pyproject.toml  requirements.txt  test_explanation_demo.py  test_fallback_demo.py
.cursor/: activity_log.md  architecture.md  changelog.md  instructions.md  roadmap.md  sandbox_execution.md
.cursor/rules/: security.mdc  standards.mdc  workflow.mdc
scripts/: create_cron_schedule.sh  create_launchd_plist.py  download_phi3_mini.py  install_service.sh  setup_launchd.sh  smoke_test_llm.py  test_imessage_notification.py  test_security_validation.py  uninstall_service.sh
src/: __init__.py  config.py  main.py  security_logger.py
src/adapters/: __init__.py  apple_messages_adapter.py  email_adapter.py  email_sms_adapter.py  llama_cpp_adapter.py  market_data_exceptions.py  market_data_provider.py  news_adapter.py  ollama_adapter.py  sms_adapter.py  storage_adapter.py  yfinance_adapter.py
src/adapters/providers/: __init__.py  alpha_vantage_provider.py  finnhub_provider.py  twelve_data_provider.py  yahoo_finance_provider.py
src/models/: __init__.py  alert.py  market_data.py  stock.py  validators.py
src/services/: __init__.py  explanation_service.py  market_data_converter.py  market_data_factory.py  market_data_service.py  news_service.py  notification_service.py  price_service.py
tests/: __init__.py  conftest.py  test_execution_flow.py  test_explanation_generation.py  test_market_data_fallback.py  test_notification_channels.py  test_notification_dispatch.py  test_price_fetching.py  test_symbol_validation.py  test_threshold_detection.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_config.py  test_explanation_service.py  test_models.py  test_news_service.py  test_notification_service.py  test_price_service.py  test_storage.py
